package com.archimedeprojects.arihna.core.location.model

enum class LocationFreshness {
    FRESH,
    CACHED,
}
